<resources>
    <string name="app_name">ElectricUnitXlsToDb_20201124</string>
    <string name="app_label">Application Label</string>
    <string name="add_button">Add</string>
    <string name="update_button">Update</string>
    <string name="description_label">Description:</string>
    <string name="unit_label">Title:</string>
    <string name="delete_button">Delete</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="data_header">Data settings</string>
    <string name="design_header">Design</string>

    <!-- Messages PreferencesUnit -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="data_title">Default data source</string>

    <!-- Sync PreferencesUnit -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_add_data">Load data from table</string>
    <string name="settings">Settings</string>
    <string name="add_data_title">Add data from Table</string>
    <string name="change_button">Change</string>
    <string name="pref_theme_dark">Dark-Theme</string>
    <string name="pref_theme_dark_title">Dark Theme</string>

    <string name="search_hint">Search electrical units</string>
    <string name="unit_icon_description">Unit icon</string>
    <string name="pref_clear_data_summary">Clear all data</string>
    <string name="pref_clear_data">Clear Data</string>
    <string name="pref_clear_data_title">Clear All Data</string>
    <string name="add_data_summary">Add data summary</string>
    <string name="pref_update_data">Update Data</string>
    <string name="pref_update_data_summary">Update data (override all previous data))</string>
    <string name="pref_update_data_title">Update data</string>
    <string name="pref_edit_enable">Edit-Enable</string>
    <string name="pref_edit_enable_title">Edit enable</string>
    <string name="pref_edit_mode">Edit-Mode</string>
    <string name="location_label">Location</string>
    <string name="main_fab_description">Add unit</string>
    <string name="cabinet_label">Cabinet</string>
    <string name="pref_save_data">Save-data</string>
    <string name="pref_save_data_summary">Save data to table</string>
    <string name="pref_save_data_title">Save data</string>
</resources>