<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/design_header">

        <SwitchPreferenceCompat
            app:key="pref_sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="pref_sync"
            app:key="pref_attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="pref_reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/data_header">

        <EditTextPreference
            app:key="pref_signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="data"
            app:entries="@array/data_entries"
            app:entryValues="@array/data_values"
            app:key="pref_data"
            app:title="@string/data_title"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:key="@string/pref_load_data"
            android:defaultValue="DEFAULT"

            android:summary="@string/data_uri"
            android:title="Load data">

        </Preference>

    </PreferenceCategory>
</PreferenceScreen>